@@ -3,6 +3,8 @@
     linking of modules using -Wl,-z,defs.
 * Added macro LXPANEL_CHECK_VERSION() for third party pluguns API check.
 * Added CONF_TYPE_EXTERNAL support for lxpanel_generic_config_dlg().
+* Implemented property "aspect-width" for PanelIconGrid to allow using
+    non-square tray sockets.
 
 0.7.2
 -------------------------------------------------------------------------
